# mandelbrot-rs

./: Cargo.toml
src/: gtk_gui.rs  main.rs  mandelbrot.rs
