[package]
name = "mandelbrot"
version = "0.1.0"
authors = ["4 Eyes <nova185@gmx.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.2.0"
image = "0.22.1"
gdk-pixbuf = "0.7.0"
gdk-pixbuf-sys = "0.9.0"

[dependencies.gtk]
version = "0.7.0"
features = ["v3_16"]

[dependencies.gio]
version = ""
features = ["v2_44"]
