[package]
name = "mandelbrot"
version = "0.1.0"
authors = ["4 Eyes <nova185@gmx.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.2.0"
image = "0.22.1"

gdk-pixbuf = "*"
gdk-pixbuf-sys = "*"

relm = "^0.16.0"
relm-derive = "^0.16.0"

[dependencies.gtk]
version = "0.6.0"
features = ["v3_16", "v3_20", "dox"]

[dependencies.gio]
version = "*"
features = ["v2_44"]
